(bug 71584) Fetch title content from API
We shouldn't rely on the data in the HTML. For starters, it was
wrong in this case (truncated), but it can also be stale (having
been updated by the time you want to edit it)

Just like posts, headers, summaries, ..., we should fetch the
content from API.

Bug: 71584

--- a/modules/styles/board/topic/titlebar.less
+++ b/modules/styles/board/topic/titlebar.less
@@ -75,6 +75,12 @@ div#content h2.flow-topic-title {
 	float: right;
 }
 
+.flow-topic-title-activate-edit {
+	.flow-topic-title {
+		display: none;
+	}
+}
+
 // MEDIA QUERIES
 @media all and (min-width: @wgFlowDeviceWidthTablet) {
 	.flow-topic-titlebar {
